<resources>
    <string name="app_name">Credit Card</string>

    <string name="text_1">Credit Card Validator</string>
    <string name="text_2">Check credit card information and find public data by using credit card BIN</string>
    <string name="text_3">Check Credit Card(BIN)</string>
    <string name="loader">Loading..</string>
    <string name="text_4">Validate Credit Card</string>
    <string name="text_5">Credit Card Information</string>
    <string name="text_6">Credit Card History</string>
    <string name="text_7">Free Credit Cord Number Validator is free application allow you to check your card number and specify the type of card. The algorithm used to process the Luhn algorithm or Luhn formula, also known as the modulus 10 or mod 10 algorithm, is a simple checksum formula used to validate a variety of identification numbers.</string>
    <string name="text_8">Free Credit Card BIN checker userful application to find credit card details such as Card type, Country Issue Bank etc using BIN number(first 6 digit of card)</string>
    <string name="text_9">This tool is used to Verify Credit Card using Lubin\'ss algorithm, also known as the modulus 10 or modi 10 algorithm.</string>
    <string name="text_10">we do not represent any financial institution od bank!</string>
    <string name="text_11">The card number is one of the most important of credit card. it identifies your account with the card issuer and they provides the digits you need to make purchases online or by phone. it\'s typically 16 digits, though some manufactures use as little as 14 and as many as 19 digits.</string>
    <string name="share_app_message">Credit Card Validator. Download Now</string>
    <string name="select_country_txt">Select Country</string>
    <string name="select_language_txt">Select Language</string>
    <string name="select_card_txt">Select Card</string>
    <string name="apply_credit_card">Apply Credit Card</string>
    <string name="select_your_tpe_txt">Select Your Type</string>
    <string name="select_credit_score_type">Credit Score Type</string>
    <string name="credit_score_check_online_txt">Credit Score Check Online</string>
    <string name="credit_score_online_txt">Credit Score Online</string>
    <string name="credit_score_offline_txt">Credit Score Offline</string>
    <string name="last_negative_item">When was the last negative item on your credit report?</string>
    <string name="last_negative_item_bar_max">7+ years</string>
    <string name="last_negative_item_bar_min">Never</string>
    <string name="last_negative_item_default">Never</string>
    <string name="count_following_accounts">How many of the following accounts (open and closed) do you have listed on your credit report?</string>
    <string name="count_following_accounts_default">0</string>
    <string name="credit_cards">Credit cards</string>
    <string name="credit_cards_bar_max">6+</string>
    <string name="mortgages">Mortgages</string>
    <string name="retail_finances">Retail Finances</string>
    <string name="auto_loans">Auto Loans</string>
    <string name="student_loans">Student Loans</string>
    <string name="other_loans">Other Loans</string>
    <string name="all_credit_limits">Add up all credit limits on your open credit cards:</string>
    <string name="all_credit_limits_bar_max">₹100000+</string>
    <string name="all_credit_limits_bar_min">₹0</string>
    <string name="all_credit_limits_default_value">$100000</string>
    <string name="recent_balances">Add up all the most recent statement balances on your credit card accounts:</string>
    <string name="recent_balances_default">$100000</string>
    <string name="apply_credit">How many times have you applied for credit in the last 6 month?</string>
    <string name="apply_credit_bar_max">10+</string>
    <string name="apply_credit_bar_min">0</string>
    <string name="apply_credit_default_value">0</string>
    <string name="first_open_oldest_active">When did you first open your oldest active credit or loan account?</string>
    <string name="first_open_oldest_active_bar_max">10+ years</string>
    <string name="first_open_oldest_active_bar_min">0</string>
    <string name="fist_open_oldest_active_default">0</string>
    <string name="never">Never</string>
    <string name="zero_dollars">$0</string>
    <string name="no_accounts_open">No accounts open</string>
    <string name="report">Report</string>
    <string name="your_score_txt">Your Score</string>
    <string name="home_score_txt">Unlimited Access: You can check your CIBIL Score &amp; Report every 24 hours within your subscription period (1 month, 6 months, 12 months) \10\10 Here is what members get: Unlimited Access Loan Offers Credit, Monitoring, Dispute Resolution and more.</string>
    <string name="home_score_website_txt">https://www.cibil.com/</string>
    <string name="buy_score_txt">Introducing Score Simulator with your CIBIL Score subscription. Monitoring &amp; maintaining your credit health now becomes easier. \10\10 Subscription Plan :- \10 Premium ₹1200(1 Year) \10 Standard ₹800(6 Month) \10 Basic ₹550(1 Month)</string>
    <string name="buy_score_website_txt">https://www.cibil.com/creditscore/</string>
    <string name="com_score_txt">Introducing CIBIL RANK with your Company Credit Report at no additional cost. \10\10 The CIBIL RANK and Company Credit Report is an indication of your loan eligibility.</string>
    <string name="com_score_website_txt">https://www.cibil.com/company-credit-report</string>
    <string name="cal_score_txt">Calculate or Estimate your CIBIL Score for Free. \10 Great! Now that you are here, you would be keen to check your online Cibil score free of cost. \10\10 We have been helping friends like you get a free Cibil score with an accuracy of up to 93%.</string>
    <string name="cal_score_website_txt">https://cashkumar.com/free-online-cibil-score-check</string>
    <string name="dis_score_txt">Looking for loans for your CIBIL Score? \10 Our Eligibility \10 • Cibil Score above 550 \10 • Loans ranging from ₹120,000 to ₹150,000 \10 • Tenure between 3 months to 12 months \10 • Interest Rate between 1.5% to 2.5% per month (flat)</string>
    <string name="dis_score_website_txt">https://www.cibil.com/dispute-resolution</string>
    <string name="media_score_txt">India Ratings and Research (Ind-Ra) is India&amp;s most respected credit rating agency committed to providing India&amp;s credit markets accurate, timely and prospective credit opinions</string>
    <string name="media_score_website_txt">https://www.indiaratings.co.in/</string>
    <string name="credit_mantri_txt">Check your FREE Credit Score and report Instantly. \10 How It Works \10 • Get a Credit Score for Free from CreditMantri. \10 • Flag off problem areas where you need expertise/help. \10 • Improve your Credit Score and Build Your Credit profile. \10 • Reduce EMI and borrowing costs and more.</string>
    <string name="credit_mantri_website_txt">https://www.creditmantri.com/</string>
    <string name="f_que">What is CIBIL?</string>
    <string name="f_ans">Ans:-TransUnion CIBIL Limited (or CIBIL – Credit Information Bureau India Limited CIBIL) is one of the foremost credit bureaus licensed to operate by the Reserve Bank of India (RBI). CIBIL gathers and preserves records of an individual’s payments pertaining to credit cards and loans.</string>
    <string name="t_ans">Ans:-CIBIL score or report plays a very important role in an individual’s financial life. So much so that lenders totally rely on the reports to assess the credit worthiness and as to how much credit they can give you. So it’s always better to be on the higher side of the credit score because there will be brighter chances of getting credit approvals or else they would not trust you with their lending. A higher score will also help in getting some of the best interest rates.</string>
    <string name="t_que">How does your CIBIL score/report matter?</string>
    <string name="s_ans">Ans:-The report is obviously prepared by Credit Information Bureau (India) Limited. The report is prepared based on the financial behavior of a customer. Hence, the bureau receives information from financial institutions or banks about your credit behavior patterns which will then decide the scores and those will help in creating credit report.</string>
    <string name="s_que">Who prepares the CIBIL score or report?</string>
    <string name="se_ans">Ans:-There was a recent update from RBI stating the customers should be given proper access to their reports as in when requested. One can contact CIBIL through their website contact details and can check for any sort of mistakes in it.</string>
    <string name="se_que">How do you correct errors in your CIBIL report?</string>
    <string name="fi_ans">Ans:-A profile which has a high credit score has brighter chances of loan approval whereas a low score reflects low credibility resulting in less credit approvals.</string>
    <string name="fi_que">How do high and low credit score affect a credit profile?</string>
    <string name="si_ans">Ans:-There are different ways of checking the scores. If an enquiry is done just to know the credit standing it is called as a “soft inquiry” which will not have any impact. But in case there is an inquiry done by credit card lenders it is called as “hard inquiry” which will impact your score to an extent. When there are numerous loan requests by a customer then there can be a negative impact on the score.</string>
    <string name="si_que">How does checking a score have negative effect on the credit score or report?</string>

</resources>